guys i tried to do the double thing i think it works now type shi